<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/orange"
        android:paddingTop="@dimen/default_margin"
        android:backgroundTint="@android:color/white"
        android:hint="@string/new_comp_form_name_placeholder"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tags_input"
        android:textColorHint="@color/orange"
        android:backgroundTint="@android:color/white"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/default_margin"
        android:hint="@string/new_comp_form_tags_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input" />


    <EditText
        android:id="@+id/description_input"
        android:backgroundTint="@android:color/white"
        android:textColorHint="@color/orange"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_comp_form_description_placeholder"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tags_input" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:text="@string/new_comp_form_submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_input"
        app:layout_editor_absoluteX="16dp" />

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="392dp"
        android:layout_height="368dp"
        android:src="@drawable/gif_noice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_submit" />

</androidx.constraintlayout.widget.ConstraintLayout>