<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_statistique_top_comp"
        style="@style/BasicTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_competence"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/top_competence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_statistique_top_comp"
        tools:itemCount="1" />

    <TextView
        android:id="@+id/textView5"
        style="@style/BasicTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/total_lvl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_competence"/>
    <TextView
        android:id="@+id/numb_total_lvl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BasicTitleStyle"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/default_margin"
        android:text="UNDEFINED"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BasicTitleStyle"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/last_competence"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numb_total_lvl" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/last_competence_modified"
        android:paddingTop="@dimen/default_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="1" />

</androidx.constraintlayout.widget.ConstraintLayout>